# bds-mod-mapping

./: CMakeLists.txt
minecraft-headers/minecraft/: BinaryStream.h  Biome.h  BiomeRegistry.h  Block.h  BlockLegacy.h  BlockSerializationUtils.h  BlockTypeRegistry.h  HashedString.h  ItemRegistry.h  LevelSoundEventMap.h  PrintStream.h  ReadOnlyBinaryStream.h  ServerInstance.h
src/: main.cpp
